# strava_segments2gpx

./: .travis.yml  CMakeLists.txt  README.md  strava_segments2gpx.cpp
data/: sample_response.txt
doc/: deg2km.ods
